[package]
name = "leo-ast"
version = "3.2.0"
authors = [ "The Leo Team <leo@provable.com>" ]
description = "Abstract syntax tree (AST) for the Leo programming language"
homepage = "https://leo-lang.org"
repository = "https://github.com/ProvableHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2024"

[dependencies.snarkvm]
workspace = true

[dependencies.leo-errors]
workspace = true

[dependencies.leo-span]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.indexmap]
workspace = true

[dependencies.itertools]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.rand_chacha]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[features]
default = [ ]
ci_skip = [ ]
